<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_habit_list_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:ignore="Overdraw">

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_sheet_title_bar"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_0"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bottom_sheet_title_bar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16"
            android:text="@string/find_and_sort"
            android:textAlignment="textStart"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="@dimen/text_20" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_type_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_16"
        android:hint="@string/filter_type"
        app:layout_constraintEnd_toStartOf="@+id/filter_sort_down_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title_bar">

        <AutoCompleteTextView
            android:id="@+id/filter_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@android:array/emailAddressTypes"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_search_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_16"
        android:hint="@string/search"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_type_input_layout"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textSize="@dimen/text_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/filter_sort_down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_8"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/dimen_12"
        app:layout_constraintEnd_toStartOf="@+id/filter_sort_up_button"
        app:layout_constraintTop_toTopOf="@+id/filter_type_input_layout"
        app:srcCompat="@drawable/ic_baseline_arrow_downward_24"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/filter_sort_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_8"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/dimen_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_type_input_layout"
        app:srcCompat="@drawable/ic_baseline_arrow_upward_24"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>